<resources>
    <string name="app_name">InvoiceApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_clientes">Clients</string>
    <string name="action_services">Products and services</string>
    <string name="action_new_invoice">Add sale</string>
    <string name="action_bills">Sales</string>
    <string name="action_home">Home</string>
    <string name="action_reports">Reports</string>
    <string name="action_purchase">Expenses</string>
    <string name="action_license">License</string>
    <string name="action_client_debts">Account Receivable</string>
    <string name="action_whats_new">What\'s new</string>
    <string name="action_image">Add logo</string>
    <string name="button_save">Save</string>
    <string name="file_saved_success">File saved successful</string>
    <string name="file_saved_error">Error trying to save the file</string>
    <string name="title_activity_settings">Settings</string>
    <string name="generic_action_edit">Edit</string>
    <string name="generic_action_delete">Delete</string>
    <string name="generic_action_details">Details</string>
    <string name="generic_action_bill_nullify">Nullify / Accept sale</string>
    <string name="generic_action_show_bill">Show bill</string>
    <string name="pref_header_general">Basic Information</string>
    <string name="pref_header_bills_number">Bills number</string>
    <string name="pref_header_currency">Currency</string>
    <string name="pref_title_display_name">Name</string>
    <string name="pref_key_display_name" translatable="false">display_name_pref</string>
    <string name="pref_default_display_name" translatable="false">""</string>
    <string name="pref_title_nit">ID</string>
    <string name="pref_key_nit" translatable="false">nit_pref</string>
    <string name="pref_default_nit" translatable="false">""</string>
    <string name="pref_title_direction">Address</string>
    <string name="pref_key_direction" translatable="false">direction_pref</string>
    <string name="pref_default_direction" translatable="false">""</string>
    <string name="pref_title_telephone_number">Phone number</string>
    <string name="pref_key_telephone_number" translatable="false">telephone_number_pref</string>
    <string name="pref_default_telephone_number" translatable="false">""</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_key_email" translatable="false">email_pref</string>
    <string name="pref_default_email" translatable="false">""</string>
    <string name="pref_title_bills_from">From:</string>
    <string name="pref_key_bills_from" translatable="false">bills_from</string>
    <string name="pref_default_bills_from" translatable="false">0</string>
    <string name="pref_title_bills_to">To:</string>
    <string name="pref_key_bills_to" translatable="false">bills_to</string>
    <string name="pref_default_bills_to" translatable="false">0</string>
    <string name="pref_title_resolution">Resolution</string>
    <string name="pref_key_resolution" translatable="false">resolution</string>
    <string name="pref_default_resolution" translatable="false">""</string>
    <string name="pref_title_prefix_resolution">Prefix Resolution</string>
    <string name="pref_key_prefix_resolution" translatable="false">prefix_resolucion</string>
    <string name="pref_default_prefix_resolution" translatable="false">""</string>
    <string name="pref_key_invoice_number" translatable="false">invoice_number</string>
    <string name="pref_title_currency_digits">Number of decimal digits to show in the currency</string>
    <string name="pref_key_currency_digits" translatable="false">key_currency_digits</string>
    <string name="pref_default_currency_digits" translatable="false">"2"</string>
    <string name="pref_title_country">Country</string>
    <string name="pref_key_country" translatable="false">prefix_country</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_ticket_language_ticket_title">Multiple languages on payment receipts</string>
    <string name="pref_ticket_language_summary_enabled">Enabled</string>
    <string name="pref_ticket_language_summary_disabled">Disabled</string>
    <string name="pref_value_control_date" translatable="false">control_date_value</string>
    <string name="pref_value_total_day" translatable="false">total_day_value</string>
    <string name="pref_value_total_in_credit_day" translatable="false">total_in_credit_today</string>
    <string name="pref_value_total_in_credit_deposit_day" translatable="false">total_in_credit_deposit_today</string>
    <string name="pref_value_total_bills_day" translatable="false">total_bills_day</string>
    <string name="pref_value_is_application_registered" translatable="false">is_application_registered</string>
    <string name="pref_value_is_application_registered_test" translatable="false">is_application_registered_test</string>
    <string name="pref_value_is_application_basic_data_backed_up" translatable="false">is_application_basic_data_backed_up</string>
    <string name="pref_value_email_registered" translatable="false">email_registered</string>
    <string name="pref_value_license_expiration_date" translatable="false">license_expiration_date</string>
    <string name="pref_value_purchase_total_paid_day" translatable="false">purchase_total_paid_day</string>
    <string name="pref_value_is_day_open" translatable="false">is_date_open</string>
    <string name="pref_value_control_day_time" translatable="false">control_date_time</string>
    <string name="pref_value_license_type_id" translatable="false">license_type_id</string>
    <string name="pref_value_helper_total_clients" translatable="false">total_clients_helper</string>
    <string name="pref_value_birthday_of_the_day" translatable="false">birthday_of_the_day</string>
    <string name="pref_value_currency_digits" translatable="false">currency_digits_value</string>
    <string name="pref_value_app_last_version" translatable="false">app_last_version</string>
    <string name="pref_value_application_is_limited" translatable="false">application_is_limited</string>
    <string name="pref_value_ticket_language_enabled" translatable="false">ticket_language_enabled</string>
    <string name="title_activity_clientes">Clients</string>
    <string name="title_button_open_day">Open day</string>
    <string name="title_button_close_day">Close day</string>
    <string name="main_operation_date">Date</string>
    <string name="main_bills_day_info">Day\'s sales</string>
    <string name="main_bills_total_day">Total</string>
    <string name="main_bills_grid_total_title">Total turnover</string>
    <string name="main_bills_grid_total_in_credit">Total in credits</string>
    <string name="main_bills_grid_total_day">Total in cash</string>
    <string name="main_bills_grid_total_day_subhead">(payouts included)</string>
    <string name="main_bills_grid_total_credit_deposit">Payouts</string>
    <string name="main_operation_status_open">Operations: open</string>
    <string name="main_operation_status_close">Operations: closed</string>
    <string name="main_operation_on_close_day_alert_title">Are you sure you want to close the operation for today?</string>
    <string name="main_operation_on_close_day_alert_message">Are you sure?</string>
    <string name="alert_dialog_button_accept">Accept</string>
    <string name="alert_dialog_button_cancel">Cancel</string>
    <string name="main_clients_birthday_title">Birthday Clients</string>
    <string name="main_button_new_sale">Add sale</string>
    <string name="main_button_closed_day_title_alert">Closed day</string>
    <string name="main_button_closed_day_new_sale_alert">The operations are closed. Do you want to open the day?</string>
    <string name="activity_cliente_edit">Client</string>
    <string name="client_name">Name(s)</string>
    <string name="cliente_last_name">Last name(s)</string>
    <string name="cliente_nit">Id</string>
    <string name="cliente_email">Email</string>
    <string name="cliente_phone">Phone number</string>
    <string name="cliente_address">Address</string>
    <string name="cliente_fullname">%1$s %2$s</string>
    <string name="cliente_birthday">Date of Birthday</string>
    <string name="list_cliente_phone_number">Phone number:</string>
    <string name="list_cliente_nit">Id:</string>
    <string name="cliente_remove_alert_title">Delete Client?</string>
    <string name="cliente_remove_alert_message">Are you sure you want to delete %1$s %2$s?</string>
    <string name="cliente_remove_alert_positive_button">Yes</string>
    <string name="cliente_remove_alert_negative_button">No</string>
    <string name="cliente_remove_error_has_debt_message">The client could not be removed because he has unpaid bills.</string>
    <string name="activity_services_edit">Products and services</string>
    <string name="layout_service_price">Price:</string>
    <string name="layout_service_iva">Sale Tax(%):</string>
    <string name="layout_service_discount">Discount (%):</string>
    <string name="layout_service_amount">Amount:</string>
    <string name="title_activity_services">Products and services</string>
    <string name="service_name">Name</string>
    <string name="service_iva">Sale Tax (%)</string>
    <string name="service_discount">Discount(%)</string>
    <string name="service_price">Price</string>
    <string name="service_amount">Amount</string>
    <string name="title_activity_new_invoice">Add sale</string>
    <string name="new_sale_items_price">Price:</string>
    <string name="new_sale_items_amount">Amount:</string>
    <string name="new_sale_img_selected_description">Added</string>
    <string name="new_sale_button_select">Select</string>
    <string name="new_sale_button_amount">Amount</string>
    <string name="new_sale_fragment_amount_input_hint">Amount</string>
    <string name="button_next">Next</string>
    <string name="add_service_is_null_or_empty">You must select a least one service.</string>
    <string name="new_invoice_resume">Resume</string>
    <string name="new_invoice_client_text">Client:</string>
    <string name="new_invoice_client_select">Choose a client</string>
    <string name="new_invoice_resume_total">Total:</string>
    <string name="new_invoice_resume_subtotal">Subtotal:</string>
    <string name="new_invoice_resume_iva">Sale Tax:</string>
    <string name="new_invoice_update_item">Update</string>
    <string name="new_invoice_cancel_item">Cancel</string>
    <string name="new_invoice_select_client_title">Choose a client</string>
    <string name="new_invoice_invoice_number_error">Error saving payment receipt. Ticket number is invalid.</string>
    <string name="new_invoice_pay_under_total_error">Payment has not been completed. Check the total amount paid.</string>
    <string name="new_invoice_credit_not_client_selected_error">You must select a client in order to process the credit.</string>
    <string name="new_invoice_button_show_bill">Payment receipt</string>
    <string name="new_invoice_button_pay">Pay</string>
    <string name="new_invoice_button_finish">Finish</string>
    <string name="new_invoice_pay_method">Payment method</string>
    <string name="new_invoice_method_cash">Cash</string>
    <string name="new_invoice_change">Change</string>
    <string name="new_invoice_card_reference">Reference</string>
    <string name="new_invoice_check_number">Number</string>
    <string name="new_invoice_check_bank_name">Bank name</string>
    <string name="new_invoice_credit_deposit">Credit payment</string>
    <string name="title_activity_bills">Sales</string>
    <string name="title_new_service">Add Service</string>
    <string name="button_cancel">Cancel</string>
    <string name="purchase_order_number">Number order:</string>
    <string name="purchase_provider">Provider:</string>
    <string name="purchase_date">Date:</string>
    <string name="purchase_total">Total:</string>
</resources>