<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_ticket"
        android:title="@string/new_invoice_button_show_bill"
        android:icon="@drawable/ic_description_black_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="101"
        android:enabled="false"/>
    <item
        android:id="@+id/action_add_payment"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/new_invoice_button_pay"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:enabled="true"/>
    <item
        android:id="@+id/action_save_sale"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/new_invoice_button_finish"
        app:showAsAction="ifRoom"
        android:orderInCategory="102"
        android:enabled="false"/>
</menu>