<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.softmed.payment.ServiceAddFragment">

    <TextView
        android:id="@+id/titleNewService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:text="@string/title_new_service"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@id/titleNewService">

        <TextView
            android:id="@+id/serviceNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/serviceNameEdit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/service_name"/>
        <EditText
            android:id="@+id/serviceNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@id/serviceNameText"/>
        <TextView
            android:id="@+id/servicePriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_price"
            android:labelFor="@id/servicePriceEdit"
            app:layout_constraintTop_toBottomOf="@id/serviceNameEdit"/>
        <com.softmed.payment.helpers.CurrencyEditText
            android:id="@+id/servicePriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@id/servicePriceText"/>
        <TextView
            android:id="@+id/serviceIvaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_iva"
            android:labelFor="@id/serviceIvaEdit"
            app:layout_constraintTop_toBottomOf="@id/servicePriceEdit"/>
        <EditText
            android:id="@+id/serviceIvaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@id/serviceIvaText"/>
        <TextView
            android:id="@+id/serviceDiscountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_discount"
            android:labelFor="@id/serviceDiscountEdit"
            app:layout_constraintTop_toBottomOf="@id/serviceIvaEdit"/>
        <EditText
            android:id="@+id/serviceDiscountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@id/serviceDiscountText"/>
        <Button
            android:id="@+id/serviceCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/serviceSaveButton"
            app:layout_constraintBaseline_toBaselineOf="@id/serviceSaveButton"/>
        <Button
            android:id="@+id/serviceSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/serviceDiscountEdit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/serviceCancelButton"
            style="@android:style/Widget.Material.Button.Colored"
            tools:targetApi="23"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
